# MOT

./: README.md  build_murty.sh  requirements.txt  setup.py
exps/yolo/data/: SDSObject.yaml  SMDNIR.yaml  SMDVIS.yaml  SMDVISNIR.yaml
exps/yolo/mot/: yolo11x.py  (+11 more)
murty/: CMakeLists.txt
tools/: convert_sds_to_coco.py  convert_smd_to_coco.py
tools/batch_run/: batch_eval.py  tracker_params_sds.yaml  tracker_params_smd.yaml  tracking.py
tools/fastreid/: fast_reid_interfece.py
tools/utils/: CustomDataset.py  Detector.py  ReID.py  TrackerEvaluator.py  Trackers.py  gmc.py  visualize.py
tools/yolo/: train.py  val.py
tools/yolox/: eval.py  train.py
trackers/botsort_tracker/: bot_sort.py  matching.py
trackers/byte_tracker/: byte_tracker.py
trackers/deepsort_tracker/: deepsort.py  track.py
trackers/gnn_tracker/: gnn_tracker.py
trackers/hybrid_sort_tracker/: association.py  hybrid_sort.py  hybrid_sort_reid.py  kalmanfilter_score_new.py
trackers/jpda_tracker/: jpda_tracker.py  n_best.py
trackers/mht_tracker/: dataassociator.py  hypothesiser.py  mht_tracker.py  state.py
trackers/ocsort_tracker/: kalmanfilter.py  ocsort.py  ocsort1.py
trackers/sort_tracker/: sort.py  sort1.py
trackers/strongsort_tracker/: strong_sort.py
trackers/utils/: dataassociator.py  hypothesiser.py  logpdf.py  measurement.py  state.py
trackeval/: eval.py
trackeval/datasets/: __init__.py  sds_2d_box.py  sds_2d_box_class_agnostic.py  smd_2d_box.py  smd_2d_box_class_agnostic.py
trackeval/metrics/: vace.py
ultralytics/data/: dataset.py
ultralytics/utils/: checks.py
(+45 files in other folders)
